[gd_scene load_steps=10 format=3 uid="uid://8ui4m1udtdlf"]

[ext_resource type="Script" uid="uid://ke3syfto07yu" path="res://scripts/start_menu/start_menu.gd" id="1_5v9lq"]
[ext_resource type="PackedScene" uid="uid://citrx45hw16e" path="res://scenes/ui/start_menu/level_tile_button_3d.tscn" id="2_6k0yq"]
[ext_resource type="Texture2D" uid="uid://bnrnavbcn5oya" path="res://assets/sprites/texture2D/background_image.png" id="3_bg"]
[ext_resource type="Texture2D" uid="uid://dl68gnknb4bc3" path="res://assets/sprites/texture2D/like_image.png" id="4_like"]
[ext_resource type="PackedScene" uid="uid://qb18o37ddnut" path="res://scenes/ui/start_menu/tile_scenes/cars.tscn" id="4_nxjfj"]
[ext_resource type="Texture2D" uid="uid://dxcjqlhemes4q" path="res://assets/sprites/texture2D/other_game_image.png" id="5_fcv5n"]
[ext_resource type="PackedScene" uid="uid://bq85vuxninaid" path="res://scenes/ui/start_menu/tile_scenes/insects.tscn" id="5_uojqy"]
[ext_resource type="FontFile" uid="uid://wn2s6r6ke6c4" path="res://fonts/ArialBold.TTF" id="8_4v6gu"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font = ExtResource("8_4v6gu")
font_size = 36
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5v9lq")
min_tile = 40
row_offset_multiplier = 0.7
this_game_button_size = Vector2(10, 10)
all_games_button_size = Vector2(10, 10)

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_bg")
expand_mode = 1
stretch_mode = 6

[node name="MainLayout" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameArea" type="CenterContainer" parent="MainLayout"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Rows" type="VBoxContainer" parent="MainLayout/GameArea"]
layout_mode = 2

[node name="RowTop" type="HBoxContainer" parent="MainLayout/GameArea/Rows"]
layout_mode = 2

[node name="SpacerTop" type="Control" parent="MainLayout/GameArea/Rows/RowTop"]
layout_mode = 2

[node name="Tile1" parent="MainLayout/GameArea/Rows/RowTop" instance=ExtResource("2_6k0yq")]
layout_mode = 2
tile_scene = ExtResource("4_nxjfj")

[node name="Tile2" parent="MainLayout/GameArea/Rows/RowTop" instance=ExtResource("2_6k0yq")]
layout_mode = 2
level_id = 2
tile_scene = ExtResource("5_uojqy")

[node name="Tile3" parent="MainLayout/GameArea/Rows/RowTop" instance=ExtResource("2_6k0yq")]
layout_mode = 2
level_id = 3

[node name="RowMiddle" type="HBoxContainer" parent="MainLayout/GameArea/Rows"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Spacer" type="Control" parent="MainLayout/GameArea/Rows/RowMiddle"]
layout_mode = 2

[node name="Tile4" parent="MainLayout/GameArea/Rows/RowMiddle" instance=ExtResource("2_6k0yq")]
layout_mode = 2
level_id = 4

[node name="Tile5" parent="MainLayout/GameArea/Rows/RowMiddle" instance=ExtResource("2_6k0yq")]
layout_mode = 2
level_id = 5

[node name="Tile6" parent="MainLayout/GameArea/Rows/RowMiddle" instance=ExtResource("2_6k0yq")]
layout_mode = 2
level_id = 6

[node name="RowBottom" type="HBoxContainer" parent="MainLayout/GameArea/Rows"]
layout_mode = 2

[node name="SpacerBottom" type="Control" parent="MainLayout/GameArea/Rows/RowBottom"]
layout_mode = 2

[node name="Tile7" parent="MainLayout/GameArea/Rows/RowBottom" instance=ExtResource("2_6k0yq")]
layout_mode = 2
level_id = 7

[node name="Tile8" parent="MainLayout/GameArea/Rows/RowBottom" instance=ExtResource("2_6k0yq")]
layout_mode = 2
level_id = 8

[node name="Tile9" parent="MainLayout/GameArea/Rows/RowBottom" instance=ExtResource("2_6k0yq")]
layout_mode = 2
level_id = 9

[node name="RightPanel" type="Control" parent="MainLayout"]
custom_minimum_size = Vector2(640, 0)
layout_mode = 2

[node name="PanelMargin" type="MarginContainer" parent="MainLayout/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = -40
theme_override_constants/margin_bottom = -40

[node name="PanelBg" type="Panel" parent="MainLayout/RightPanel/PanelMargin"]
layout_mode = 2

[node name="ButtonsContainer" type="VBoxContainer" parent="MainLayout/RightPanel/PanelMargin"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 80

[node name="ThisGameButton" type="TextureButton" parent="MainLayout/RightPanel/PanelMargin/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("4_like")

[node name="AllGamesButton" type="VBoxContainer" parent="MainLayout/RightPanel/PanelMargin/ButtonsContainer"]
layout_mode = 2

[node name="GameImage" type="TextureButton" parent="MainLayout/RightPanel/PanelMargin/ButtonsContainer/AllGamesButton"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
texture_normal = ExtResource("5_fcv5n")

[node name="AllGamesLabel" type="Label" parent="MainLayout/RightPanel/PanelMargin/ButtonsContainer/AllGamesButton"]
layout_mode = 2
size_flags_vertical = 0
text = "NEW GAME"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1
vertical_alignment = 1
